[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/lib/AudioManager/AudioManager.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/sfx/character/jump.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds/sfx/character/land.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/sfx/character/wall_slide.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/sfx/character/die.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Dim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -6.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, 0.0 ]
}

[node name="AudioManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BGM" type="Node" parent="."]

[node name="BgmCore_DONT_TOUCH_THIS" type="AudioStreamPlayer" parent="BGM"]

[node name="PropertySetterPlayer" type="AnimationPlayer" parent="BGM/BgmCore_DONT_TOUCH_THIS"]
anims/Dim = SubResource( 1 )
anims/FadeIn = SubResource( 2 )
anims/FadeOutNoStop = SubResource( 3 )
anims/FadeOutStop = SubResource( 4 )
anims/Undim = SubResource( 5 )

[node name="SFX" type="Node" parent="."]

[node name="Character" type="Node" parent="SFX"]

[node name="Sfx_PlayerLand" type="AudioStreamPlayer" parent="SFX/Character"]
stream = ExtResource( 3 )
volume_db = -3.0
bus = "SFX"

[node name="Sfx_PlayerDie" type="AudioStreamPlayer" parent="SFX/Character"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Sfx_PlayerJump" type="AudioStreamPlayer" parent="SFX/Character"]
stream = ExtResource( 2 )
volume_db = -6.0
pitch_scale = 1.2
bus = "SFX"

[node name="Sfx_PlayerAirJump" type="AudioStreamPlayer" parent="SFX/Character"]
stream = ExtResource( 2 )
volume_db = -6.0
pitch_scale = 1.4

[node name="Sfx_PlayerWallSlide" type="AudioStreamPlayer" parent="SFX/Character"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Collectibles" type="Node" parent="SFX"]

[node name="Sfx_Key" type="AudioStreamPlayer" parent="SFX/Collectibles"]
bus = "SFX"

[node name="Environments" type="Node" parent="SFX"]

[node name="Sfx_BossDoor" type="AudioStreamPlayer" parent="SFX/Environments"]
volume_db = -6.0

[node name="Sfx_CoinLanding" type="AudioStreamPlayer" parent="SFX/Environments"]
volume_db = -12.0

[node name="Sfx_DiamondLanding" type="AudioStreamPlayer" parent="SFX/Environments"]

[node name="Sfx_EnterDoor" type="AudioStreamPlayer" parent="SFX/Environments"]

[node name="Sfx_Fan" type="AudioStreamPlayer" parent="SFX/Environments"]
volume_db = -9.0

[node name="Sfx_PlatformExplode" type="AudioStreamPlayer" parent="SFX/Environments"]
volume_db = -7.0

[node name="Sfx_PlatformFall" type="AudioStreamPlayer" parent="SFX/Environments"]
volume_db = -9.0

[node name="Sfx_PlatformScramble" type="AudioStreamPlayer" parent="SFX/Environments"]
volume_db = -5.0

[node name="UI" type="Node" parent="SFX"]

[node name="Sfx_BossFillHp" type="AudioStreamPlayer" parent="SFX/UI"]
volume_db = -3.0

[node name="Sfx_GameStart" type="AudioStreamPlayer" parent="SFX/UI"]

[node name="Sfx_LevelUp" type="AudioStreamPlayer" parent="SFX/UI"]
volume_db = -9.0

[node name="Sfx_OneUp" type="AudioStreamPlayer" parent="SFX/UI"]
volume_db = -9.0

[node name="Uncategorized" type="Node" parent="SFX"]

[node name="Sfx_SeriousDamage" type="AudioStreamPlayer" parent="SFX/Uncategorized"]
